Fix a problem that background of transparent card is not visible when editor starts

--- a/html/css/card.css
+++ b/html/css/card.css
@@ -158,4 +158,8 @@ body > #card > #cke_editor .cke_combo{
   margin-bottom: 0px;
 }
 
+body > #card > #cke_editor .cke_inner{
+  background-color: rgba(255,255,255,0);
+}
+
 
